@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Bisonc++ V 4.13.00</title>
+<title>Bisonc++ V 4.13.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Bisonc++ V 4.13.00</h1>
+<h1 id="title">Bisonc++ V 4.13.01</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2005-2015</h2>
@@ -33,6 +33,8 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.13.01">4.13.01</a>
+Dec 19 2015;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.13.00">4.13.00</a>
 Dec 13 2015;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.11.03">4.12.03</a>
@@ -40,9 +42,7 @@ Oct  6 2015;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.11.02">4.12.02</a>
 Oct 01 2015;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.11.01">4.12.01</a>
-Sep 29 2015;
-        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.11.00">4.11.00</a>
-Aug 30 2015.
+Sep 29 2015.
         </ul>
     
 <p>
