@@ -30,6 +30,9 @@ lurl(https://github.com/fbb-git/bisoncpp/releases) or direct from its
 release page):
 
         itemization(
+        it() url(4.13.01)
+                    (https://github.com/fbb-git/bisoncpp/releases/tag/4.13.01)
+Dec 19 2015;
         it() url(4.13.00)
                     (https://github.com/fbb-git/bisoncpp/releases/tag/4.13.00)
 Dec 13 2015;
@@ -41,10 +44,7 @@ Oct  6 2015;
 Oct 01 2015;
         it() url(4.12.01)
                     (https://github.com/fbb-git/bisoncpp/releases/tag/4.11.01)
-Sep 29 2015;
-        it() url(4.11.00)
-                    (https://github.com/fbb-git/bisoncpp/releases/tag/4.11.00)
-Aug 30 2015.
+Sep 29 2015.
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
