@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title><div style="text-align: center"><strong>Bisonc++</strong> (Version 4.13.00) User Guide</div></title>
+<title><div style="text-align: center"><strong>Bisonc++</strong> (Version 4.13.01) User Guide</div></title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -9,7 +9,7 @@
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
-<h1 id="title"><div style="text-align: center"><strong>Bisonc++</strong> (Version 4.13.00) User Guide</div></h1>
+<h1 id="title"><div style="text-align: center"><strong>Bisonc++</strong> (Version 4.13.01) User Guide</div></h1>
 <h2 id="author"><div style="text-align: center">Frank B. Brokken</div></h2>
 
 <h2 id="affiliation"><div style="text-align: center">Center for Information Technology,<br/>
